// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Loading component should snapshot works with english language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <img
      alt="Logo"
      class="img-root img-root"
      src=""
    />
  </div>
</div>
`;

exports[`testing Loading component should snapshot works with portuguese language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <img
      alt="Logotipo"
      class="img-root img-root"
      src=""
    />
  </div>
</div>
`;

exports[`testing Loading component should snapshot works with spanish language 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root Component-root Component-root"
  >
    <img
      alt="Logotipo"
      class="img-root img-root"
      src=""
    />
  </div>
</div>
`;
